// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content matches snapshot 1`] = `
Array [
  .c0 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  margin: 0;
  position: absolute;
  left: 0;
  top: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  -webkit-clip: auto;
  clip: auto;
  height: auto;
  width: auto;
  z-index: 20;
}

<a
    className="c0"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  .c0 {
  z-index: 2;
  top: 0;
  overflow: visible;
}

@media (max-width:90em) {
  .c0 {
    position: -webkit-sticky;
    position: sticky;
  }
}

@media (min-width:90em) {
  .c0 {
    position: fixed;
    right: 0;
  }
}

<div
    className="c0"
  />,
  .c6 {
  margin: 0 auto;
  max-width: 57rem;
  padding: 1.6rem;
  padding-bottom: 0;
  font-family: Helvetica Neue;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #424242;
  overflow: visible;
}

.c6 * {
  overflow: initial;
}

.c9 {
  line-height: 2.5rem;
  font-size: 1.6rem;
  color: #027EB5;
}

.c7 {
  font-family: Helvetica Neue;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #424242;
  background: white;
  box-shadow: 0 0 2px 2px rgba(0,0,0,0.1);
  margin: 2rem 0 0 0;
}

.c7 > .c8,
.c7 p,
.c7 ul {
  padding: 0 1.6rem;
  max-width: 57rem;
  margin: 0 auto;
}

.c7 li {
  margin-bottom: 1rem;
  overflow: visible;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.c2 {
  top: 0;
  height: 100vh;
  overflow-y: auto;
  padding: 1rem;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #f1f1f1;
  width: 33.5rem;
}

.c2 ol {
  padding-inline-start: 10px;
}

.c2 > * {
  -webkit-transition: all 300ms;
  transition: all 300ms;
  visibility: visible;
  opacity: 1;
}

.c3 {
  list-style: none;
  font-size: 1.4rem;
}

.c4 {
  list-style: none;
  font-size: 1.4rem;
  overflow: visible;
  position: relative;
}

.c4:before {
  font-weight: bold;
  content: '>';
  position: absolute;
  right: 100%;
}

.c1 {
  overflow: visible;
  min-height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0 auto;
  width: 100%;
  max-width: 117rem;
  background-color: #fff;
}

.c0 {
  overflow: visible;
  background-color: #f1f1f1;
  width: 100%;
  min-height: 100%;
}

@media (min-width:48em) {
  .c11 {
    display: none;
  }
}

@media (max-width:48em) {
  .c10 {
    display: none;
  }
}

@media (max-width:48em) {
  .c7 {
    min-height: 4rem;
    padding: 0.8rem 0 0 0;
  }

  .c7 > .c8 {
    margin-bottom: 0.8rem;
  }
}

@media (min-width:48em) {
  .c7 {
    min-height: 6rem;
    padding: 1.8rem 0 0 0;
  }

  .c7 > .c8 {
    margin-bottom: 1.8rem;
  }
}

@media (max-width:64em) {
  .c2 {
    position: -webkit-sticky;
    position: sticky;
  }
}

@media (min-width:64em) {
  .c2 {
    position: -webkit-sticky;
    position: sticky;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div>
          <h2>
            Table of Contents
          </h2>
          <nav>
            <ol>
              <li
                className="c3"
              >
                <a
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-text\\">Test Page 1</span>",
                    }
                  }
                  href="test-page-1"
                  onClick={[Function]}
                />
              </li>
              <li
                className="c3"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 1</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c3"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 2</span>",
                          }
                        }
                        href="1-test-page-2"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c3"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 2</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c3"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 3</span>",
                          }
                        }
                        href="1-test-page-3"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c3"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 3</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      aria-label="Current Page"
                      className="c4"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
                          }
                        }
                        href="1-test-page-4"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c3"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 4</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c3"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 5</span>",
                          }
                        }
                        href="1-test-page-5"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c3"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 5</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c3"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 6</span>",
                          }
                        }
                        href="1-test-page-6"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c3"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 6</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c3"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 7</span>",
                          }
                        }
                        href="1-test-page-7"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
            </ol>
          </nav>
        </div>
      </div>
      <div
        className="c5"
        id="main-content"
        tabIndex={-1}
      >
        <button
          aria-label="Click to close the Table of Contents"
          onClick={[Function]}
        >
          toc
        </button>
        <div
          className="c6 "
        >
          <div
            data-type="chapter"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<div xmlns:m=\\"http://www.w3.org/1998/Math/MathML\\" xmlns:ns2=\\"urn:oasis:names:tc:opendocument:xmlns:xsl-fo-compatible:1.0\\" class=\\"introduction\\" data-cnxml-to-html-ver=\\"1.3.2\\" data-type=\\"page\\" id=\\"1d1fd537-77fb-4eac-8a8a-60bbaa747b6d\\">this is a test page</div>",
                }
              }
              data-type="page"
            />
          </div>
        </div>
        <details
          className="c7"
        >
          <summary
            className="c8 c9"
          >
            <span
              className="c10"
            >
              How to Reuse & Attribute This Content
            </span>
            <span
              className="c11"
            >
              Attribution
            </span>
          </summary>
          <p>
            © Feb 11, 2019 OpenStax. Textbook content produced by OpenStax is licensed under a 
            Sweet License
             
            1.0
             license. Under this license, any user of this textbook or the textbook contents herein must provide proper attribution as follows:
          </p>
          <ul>
            <li>
              The OpenStax name, OpenStax logo, OpenStax book covers, OpenStax CNX name, and OpenStax CNX logo are not subject to the creative commons license and may not be reproduced without the prior and express written consent of Rice University. For questions regarding this license, please contact support@openstax.org.
            </li>
            <li>
              If you use this textbook as a bibilographic reference, then you should cite it as follows: OpenStax 
              Test Book 1
              , 
              Test Book 1
              . OpenStax CNX. Feb 11, 2019 https://openstax.org
              /books/book-slug-1/pages/doesnotmatter
              .
            </li>
            <li>
              If you redistribute this textbook in a print format, then you must include on every physical page the following attribution: Download fro free at https://openstax.org
              /books/book-slug-1/pages/doesnotmatter
              .
            </li>
            <li>
              If you redistribute part of this textbook, then you must retain in every digital format page view (invluding but not limited to EPUB, PDF, and HTML) an on every physically printed page the following attribution: Download for free at https://openstax.org
              /books/book-slug-1/pages/doesnotmatter
              .
            </li>
          </ul>
        </details>
      </div>
    </div>
  </div>,
]
`;

exports[`content renders empty state 1`] = `
Array [
  .c0 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  margin: 0;
  position: absolute;
  left: 0;
  top: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  -webkit-clip: auto;
  clip: auto;
  height: auto;
  width: auto;
  z-index: 20;
}

<a
    className="c0"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  .c0 {
  z-index: 2;
  top: 0;
  overflow: visible;
}

@media (max-width:90em) {
  .c0 {
    position: -webkit-sticky;
    position: sticky;
  }
}

@media (min-width:90em) {
  .c0 {
    position: fixed;
    right: 0;
  }
}

<div
    className="c0"
  />,
  .c4 {
  margin: 0 auto;
  max-width: 57rem;
  padding: 1.6rem;
  padding-bottom: 0;
  font-family: Helvetica Neue;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #424242;
  overflow: visible;
}

.c4 * {
  overflow: initial;
}

.c7 {
  line-height: 2.5rem;
  font-size: 1.6rem;
  color: #027EB5;
}

.c5 {
  font-family: Helvetica Neue;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #424242;
  background: white;
  box-shadow: 0 0 2px 2px rgba(0,0,0,0.1);
  margin: 2rem 0 0 0;
}

.c5 > .c6,
.c5 p,
.c5 ul {
  padding: 0 1.6rem;
  max-width: 57rem;
  margin: 0 auto;
}

.c5 li {
  margin-bottom: 1rem;
  overflow: visible;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.c2 {
  top: 0;
  height: 100vh;
  overflow-y: auto;
  padding: 1rem;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #f1f1f1;
  width: 33.5rem;
}

.c2 ol {
  padding-inline-start: 10px;
}

.c2 > * {
  -webkit-transition: all 300ms;
  transition: all 300ms;
  visibility: visible;
  opacity: 1;
}

.c1 {
  overflow: visible;
  min-height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0 auto;
  width: 100%;
  max-width: 117rem;
  background-color: #fff;
}

.c0 {
  overflow: visible;
  background-color: #f1f1f1;
  width: 100%;
  min-height: 100%;
}

@media (min-width:48em) {
  .c9 {
    display: none;
  }
}

@media (max-width:48em) {
  .c8 {
    display: none;
  }
}

@media (max-width:48em) {
  .c5 {
    min-height: 4rem;
    padding: 0.8rem 0 0 0;
  }

  .c5 > .c6 {
    margin-bottom: 0.8rem;
  }
}

@media (min-width:48em) {
  .c5 {
    min-height: 6rem;
    padding: 1.8rem 0 0 0;
  }

  .c5 > .c6 {
    margin-bottom: 1.8rem;
  }
}

@media (max-width:64em) {
  .c2 {
    position: -webkit-sticky;
    position: sticky;
  }
}

@media (min-width:64em) {
  .c2 {
    position: -webkit-sticky;
    position: sticky;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      />
      <div
        className="c3"
        id="main-content"
        tabIndex={-1}
      >
        <button
          aria-label="Click to close the Table of Contents"
          onClick={[Function]}
        >
          toc
        </button>
        <div
          className="c4 "
        >
          <div
            data-type="chapter"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "",
                }
              }
              data-type="page"
            />
          </div>
        </div>
        <details
          className="c5"
        >
          <summary
            className="c6 c7"
          >
            <span
              className="c8"
            >
              How to Reuse & Attribute This Content
            </span>
            <span
              className="c9"
            >
              Attribution
            </span>
          </summary>
          <p>
            © Feb 11, 2019 OpenStax. Textbook content produced by OpenStax is licensed under a 
             
             license. Under this license, any user of this textbook or the textbook contents herein must provide proper attribution as follows:
          </p>
          <ul>
            <li>
              The OpenStax name, OpenStax logo, OpenStax book covers, OpenStax CNX name, and OpenStax CNX logo are not subject to the creative commons license and may not be reproduced without the prior and express written consent of Rice University. For questions regarding this license, please contact support@openstax.org.
            </li>
            <li>
              If you use this textbook as a bibilographic reference, then you should cite it as follows: OpenStax 
              , 
              . OpenStax CNX. Feb 11, 2019 https://openstax.org
              /books/book-slug-1/pages/doesnotmatter
              .
            </li>
            <li>
              If you redistribute this textbook in a print format, then you must include on every physical page the following attribution: Download fro free at https://openstax.org
              /books/book-slug-1/pages/doesnotmatter
              .
            </li>
            <li>
              If you redistribute part of this textbook, then you must retain in every digital format page view (invluding but not limited to EPUB, PDF, and HTML) an on every physically printed page the following attribution: Download for free at https://openstax.org
              /books/book-slug-1/pages/doesnotmatter
              .
            </li>
          </ul>
        </details>
      </div>
    </div>
  </div>,
]
`;
